--- a/biology.html
+++ b/biology.html
@@ -182,7 +182,7 @@
             <!-- Image section -->
             <div class="media-container">
                 <!-- My Biology image from the images folder -->
-                <img src="images/biology.png" alt="Biology">
+                <img src="biology.png" alt="Biology">
             </div>
 
             <!-- Button that takes you back to the homepage -->
@@ -190,4 +190,5 @@
         </div>
     </div>
 </body>
+
 </html>
